# Tige-TAPS2

./: README.md
box/: .gitignore  box.skb  box.skp  boxTop.stl
pcb/: .gitignore  TAPS.kicad_pcb  TAPS.kicad_pro  TAPS.kicad_sch  fp-lib-table  sym-lib-table
src/: CActuator.cpp  CGauge.cpp  CI2C.cpp  CMakeLists.txt  CMessage.cpp  CNVFRAM.cpp  CNVFlash.cpp  CPowerFail.cpp  hal.cpp  taps.cpp  util.cpp
src/include/: CActuator.hpp  CGauge.hpp  CNVFRAM.hpp  CNVFlash.hpp  CNVState.hpp  CPowerFail.hpp  CRC.hpp  config.h  hal.hpp  taps.hpp  util.hpp
